Closed
Bug 398614
Opened 18 years ago
Closed 18 years ago
When restoring a session, windows whose active tab is still loading don't appear in the Window menu
Categories
(Camino Graveyard :: Toolbars & Menus, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino1.6
People
(Reporter: alqahira, Assigned: stuart.morgan+bugzilla)
Details
(Keywords: fixed1.8.1.10)
Attachments
(1 file)
|
1.02 KB,
patch
|
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
STR:
1. Enable session-saving
2. Have several windows open
3. In one window, have a number of tabs that will take a while to load, and make sure one of those is active (the best way to repro this is to have a large number of bugs open in the window, such that you'll exceed the number of requests Camino will make to Bugzilla at a time)
4. Quit
5. Relaunch Camino
6. Examine the Window menu and compare to the number of windows actually open
What seems to happen is that any window that has no title does not appear in the window menu, and any tab we haven't started loading will have no title. Thus, if a tab we haven't started loading is set as the active (last-used) tab in a given window in the WindowState.plist, that window won't show up in the window menu.
I'm not sure we can do anything about this (init the tabs to about:blank first during session restoration, which will give them a default title of "Untitled"?), but it is a disconcerting bug, especially when one of those windows happens to be minimized and you wonder what in the heck happened to your window of 100 tabs....
| Assignee | ||
Comment 1•18 years ago
|
||
Great find. With a description that precise, finding a fix was very easy :)
We just need to start BrowserWrappers off with the default "Untitled" value that they will always use once the the title has been set once. This also fixes a related but less obvious bug, where changing to a newly-created loading tab doesn't update the window title from whatever the old tab's title was.
Assignee: nobody → stuart.morgan
Status: NEW → ASSIGNED
Attachment #283649 -
Flags: superreview?(mikepinkerton)
| Assignee | ||
Updated•18 years ago
|
Target Milestone: --- → Camino1.6
Comment 2•18 years ago
|
||
Comment on attachment 283649 [details] [diff] [review]
fix
rs=pink
Attachment #283649 -
Flags: superreview?(mikepinkerton) → superreview+
| Assignee | ||
Comment 3•18 years ago
|
||
Landed on trunk and MOZILLA_1_8_BRANCH.
You need to log in
before you can comment on or make changes to this bug.
Description
•