Camino only - Bug 398614: Set loading page title to Untitled immediately. r/sr=pink